--- a/flightgoggles_uav_dynamics/CMakeLists.txt
+++ b/flightgoggles_uav_dynamics/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
     geometry_msgs
     tf2
     tf2_ros
+    nav_msgs
 )
 
 ## System dependencies are found with CMake's conventions
