--- a/flightgoggles_uav_dynamics/package.xml
+++ b/flightgoggles_uav_dynamics/package.xml
@@ -58,6 +58,7 @@
   <depend>mav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <!-- Libraries -->
   <depend>tf2</depend>
